--- a/myplaybook.yml
+++ b/myplaybook.yml
@@ -2,8 +2,9 @@
 - hosts: all
   become: yes
   tasks:
-    -name : install git
-  apt : 
+    -name : install webserver
+  apt :
+     name: apache2  
      state: present
 
 - name: install tree
